[package]

name = "sys-info"
version = "0.3.2"
authors = ["Siyu Wang <FillZpp.pub@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["system", "cpu", "disk", "memory"]
repository = "https://github.com/FillZpp/sys-info-rs"
documentation = "http://docs.fillzpp.org/sys-info-rs/sys_info/"
description = """
Get system information in Rust.

For now it supports Linux, Mac OS X and Windows.
"""

links = "info"
build = "build.rs"

[lib]
name = "sys_info"
path = "lib.rs"

[build-dependencies]
gcc = "*"


