[package]

name = "sys-info"
version = "0.5.6"
authors = ["Siyu Wang <FillZpp.pub@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["system", "cpu", "disk", "memory", "information"]
repository = "https://github.com/FillZpp/sys-info-rs"
documentation = "https://docs.rs/sys-info/0.5.6/sys_info/"
description = """
Get system information in Rust.

For now it supports Linux, Mac OS X and Windows.
"""

links = "info"
build = "build.rs"

[lib]
name = "sys_info"
path = "lib.rs"

[build-dependencies]
cc = "1"

[dependencies]
libc = "0.2.29"
